packages/example/content/boomerang-flow/3.1.0/getting-to-know/07.tasks.md
---
title: Tasks
index: 7
---

# Tasks

When in the workflow editor, notice the collapsible task palette on the left side of the Editor page.

Tasks are split into different expendable categories. Individual tasks can be dragged and dropped on the Editor graphical interface. From there, you connect tasks together in a left-to-right flow. Click the pencil icon on any task to access configuration parameters for a task.

## Identifying Attributes

Tasks themselves have a few distinguishing identifiers and attributes.

### Tasks

Tasks can be managed via Task Manager and can be labeled as `verified` or `community contribution`. _We may refer to Tasks as Template Tasks._

Tasks provided out-of-the-box with an installation are labeled as `verified` with a blue ribbon icon located to the right of the task in the palette.

Teams are welcome to create their own tasks, that will be labeled as a `community contribution`. The Boomerang team provides support to verified tasks. These tasks are described in more detail below.

### System Tasks

System tasks are special tasks that affect the logic of the workflow and do not execute inside a container, but instead affect the processing of the DAG. System tasks are identified by their system label, that appears to the top left of a task when dragged onto the editor.

**Switch**

A Switch is a subtype of a system task which allows for simple branch-based decisions.

This task acts as a logical gate for workflows. The Switch task takes a value. This could likely be an output property from a previous task or an input property to the workflow.

You have the ability to conditionally control the path of execution, based on the value supplied to the switch. If a link coming off the switch has a set label that does not match the value of what was supplied to the switch, then those subsequent connected tasks will not be executed.

**Manual Approval**

This task creates a pause in workflow execution. An approver can mark their approval from the execution screen. Once an approver marks 'approve' or 'deny', then the workflow will resume task execution.

**Wait For Event**

Wait for an event from an external system to resume workflow execution. The event can be a webhook or a Cloud Event. Visit our eventing architecture for more information.

**Set Output Property**

This task accepts a name and value. Create a property that is the output of a workflow.

### Custom Task

With the Custom task, you can bring your own container and run that as a task.

## Task Versioning

We may publish a new version of a task if we want to add additional parameters or functionality. In doing so, these may introduce breaking changes. So workflows won't be automatically updated to use the latest version of the task.

There will be a caution icon displayed on your workflow tile to let you know that there is a more recent version available of a task. You can view the comparison of the previous version and what the new version looks like. You can continue to run your workflow with the previous version, but we suggest you upgrade to the latest version.

## Available Template Tasks

The following tasks are available as verified tasks. Their output properties that are available for use are identified. Refer to [Getting To Know Properties](/boomerang-flow/getting-to-know/properties) for more information on how to use output properties or provide input to tasks with properties.

### Artifactory

| Task Name         | Description                                                                                                                                                                                                              | Output Properties |
| ----------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------- |
| **File Download** | Supplies login credentials to Artifactory (via username/password or username/API Token) and the direct URL route to the desired file. The file will be downloaded and named based upon the `Destination Path` specified. |                   |
| **File Upload**   | Similar to the above plugin, specifies the URL to include the path in Artifactory, and specifies the name of the file at the end of the path that is displayed in Artifactory.                                           |                   |

## IBM Services Essentials

| Task Name                      | Description                                                                                                                        | Output Properties |
| ------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------- | ----------------- |
| **Send Platform Email**        | Configures an email to be sent from the platform.                                                                                  |                   |
| **Send Platform Notification** | Sends a platform-wide notification. For more information on platform notifications, see the IBM Services Essentials documentation. |                   |

## Communication

| Task Name                            | Description                                                                                                                                                  | Output Properties |
| ------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------- |
| **Simple Slack Message**             | Uses the wrapper plugin around the [Slack Messaging API](https://api.slack.com/messaging/sending)                                                            |                   |
| **Custom Slack Message**             | Allows for more configuration and creates a custom JSON payload if the simple Slack message does not meet your needs. Refer to the Slack<sup>®</sup> API     |                   |
| **Slack Message with File Contents** | similar to the simple Slack message, this plugin allows you to attach contents of a file.                                                                    |                   |
| **Send Twilio SMS**                  | Reference the [Twilio API](https://www.twilio.com/docs/sms/api)                                                                                              |                   |
| **Send Sendgrid Email**              | Using your Sendgrid API Key, send a basic email. You also have the option to supply a template ID and dynamic data in order to send a Dynamic Template mail. |                   |
| **Upload Slack File with Message**   | Uploads a file to Slack                                                                                                                                      |                   |
| **Slack User Look Up**               | Derives a Slack username from an email, using the Slack API. Usually used as a step before sending a Slack message to a user.                                |                   |

## File Utilities

| Task Name                       | Description                                                                                                                                           | Output Properties |
| ------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------- |
| **Check File Contains String**  | Specifies a direct path that includes the file name. The plugin will search to find a specified regex pattern for the file.                           |                   |
| **Check File or Folder Exists** | Searches for a file or folder. You can have the task fail if the folder/file is not found.                                                            |                   |
| **Create File**                 | Specifies a file location and its contents.                                                                                                           |                   |
| **Read File to Property**       | Specifies a file and the desired output property name. The file gets stored as an output string and can be referenced as a value in later tasks.      |                   |
| **Read Properties from File**   | In a delimiter separated list, converts key-value pairs into output properties that can be accessed in later tasks. List one key-value pair per line. |                   |
| **Replace String in a File**    | Within a specified file, replaces the first instance of a string with the value supplied by the user during configuration.                            |                   |

## GitHub

| Task Name                           | Description                                                                                                                                                                       | Output Properties                                                  |
| ----------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------ |
| **Find Issues and Label**           | Finds issues in a repository based on time since last activity, and adds a label and a comment. This is useful for marking issues inactive or reminding users to update an issue. | <ul><li>`repositories`</li><li>`repositoriesPrettyPrint`</li></ul> |
| **Find Issues and Remove**          | Finds GitHub<sup>®</sup> issues and removes them with optional days since activity and labels.                                                                                    |                                                                    |
| **Find Public Repositories in Org** | Finds GitHub<sup>®</sup> repositories in a particular organization that are set to public visibility.                                                                             |                                                                    |
| **Make Repositories Private**       | Loops through and changes repositories to private visibility.                                                                                                                     |                                                                    |

## ServiceNow

| Task Name            | Description                                                     | Output Properties |
| -------------------- | --------------------------------------------------------------- | ----------------- |
| **Get Incidents**    | Gets incidents from ServiceNow<sup>®</sup> with optional state. |                   |
| **Update Incidents** | Updates incidents from ServiceNow.                              |                   |

## Utilities

| Task Name                 | Description                                                                                   | Output Properties |
| ------------------------- | --------------------------------------------------------------------------------------------- | ----------------- |
| **Execute HTTP Call**     | Makes an HTTP request, and specifies an endpoint.                                             |                   |
| **Execute Shell Script**  | Supplies your own script.                                                                     |                   |
| **Json Path To Property** | Takes the first value returned by a valid JSONPath expression and sets as an output property. |                   |
| **Sleep**                 | Sleeps for a specified duration, in milliseconds.                                             |                   |
